Consolidated phone auth (#38)
* add in IDV-enabled check
* jwt consent redirect fix
* concat test on error.jsp for 1/2 use case

Co-authored-by: meihDS <70775251+meihDS@users.noreply.github.com>