@@ -5,12 +5,16 @@ import com.docusign.common.WorkArguments;
 import com.docusign.core.model.DoneExample;
 import com.docusign.core.model.Session;
 import com.docusign.core.model.User;
+import com.docusign.esign.api.AccountsApi;
 import com.docusign.esign.api.EnvelopesApi;
 import com.docusign.esign.client.ApiException;
+import com.docusign.esign.model.AccountIdentityVerificationResponse;
 import com.docusign.esign.model.Document;
 import com.docusign.esign.model.EnvelopeDefinition;
 import com.docusign.esign.model.EnvelopeSummary;
-import com.docusign.esign.model.RecipientSMSAuthentication;
+import com.docusign.esign.model.RecipientIdentityInputOption;
+import com.docusign.esign.model.RecipientIdentityPhoneNumber;
+import com.docusign.esign.model.RecipientIdentityVerification;
 import com.docusign.esign.model.Recipients;
 import com.docusign.esign.model.SignHere;
 import com.docusign.esign.model.Signer;
@@ -21,17 +25,17 @@ import org.springframework.ui.ModelMap;
 import org.springframework.web.bind.annotation.RequestMapping;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.List;
+
 
 import javax.servlet.http.HttpServletResponse;
 
 
 /**
- * Send an envelope with a recipient using SMS Authentication.
+ * Example 020: Phone Authentication for recipient
  */
 @Controller
 @RequestMapping("/eg020")
-public class EG020ControllerSmsAuthentication extends AbstractEsignatureController {
+public class EG020ControllerPhoneAuthentication extends AbstractEsignatureController {
     // For List.of you could even do groups of numbers such as List.of("415-555-1212", "415-555-3434");
     private static final String DOCUMENT_FILE_NAME = "World_Wide_Corp_lorem.pdf";
     private static final String DOCUMENT_NAME = "Lorem";
@@ -41,8 +45,8 @@ public class EG020ControllerSmsAuthentication extends AbstractEsignatureControll
 
 
     @Autowired
-    public EG020ControllerSmsAuthentication(DSConfiguration config, Session session, User user) {
-        super(config, "eg020", "Signing request by email");
+    public EG020ControllerPhoneAuthentication(DSConfiguration config, Session session, User user) {
+        super(config, "eg020", "Require Phone Authentication for a Recipient");
         this.session = session;
         this.user = user;
     }
@@ -57,7 +61,8 @@ public class EG020ControllerSmsAuthentication extends AbstractEsignatureControll
         EnvelopesApi envelopesApi = createEnvelopesApi(session.getBasePath(), user.getAccessToken());
 
         // Step 3: Construct your envelope JSON body
-        EnvelopeDefinition envelope = createEnvelope(args.getSignerName(), args.getSignerEmail(), args.getPhoneNumber());
+        String workFlowId = getWorkflowId(accountId);
+        EnvelopeDefinition envelope = createEnvelope(args.getSignerName(), args.getSignerEmail(), args.getCountryCode(), args.getPhoneNumber(), workFlowId);
 
         // Step 4: Call the eSignature REST API
         EnvelopeSummary results = envelopesApi.createEnvelope(accountId, envelope);
@@ -72,7 +77,7 @@ public class EG020ControllerSmsAuthentication extends AbstractEsignatureControll
         return DONE_EXAMPLE_PAGE;
     }
 
-    private static EnvelopeDefinition createEnvelope(String signerName, String signerEmail, String phoneNumber) throws IOException {
+    private static EnvelopeDefinition createEnvelope(String signerName, String signerEmail, String countryCode, String phone, String workFlowId) throws IOException {
         Document doc = EnvelopeHelpers.createDocumentFromFile(DOCUMENT_FILE_NAME, DOCUMENT_NAME, "1");
 
         SignHere signHere = new SignHere();
@@ -85,9 +90,22 @@ public class EG020ControllerSmsAuthentication extends AbstractEsignatureControll
         // A 1- to 8-digit integer or 32-character GUID to match recipient IDs on your own systems.
         // This value is referenced in the Tabs element below to assign tabs on a per-recipient basis.
         signHere.setRecipientId("1");
-        List<String> RECIPIENT_PHONE_NUMBERS = List.of(phoneNumber);
-        RecipientSMSAuthentication smsAuth = new RecipientSMSAuthentication();
-        smsAuth.setSenderProvidedNumbers(RECIPIENT_PHONE_NUMBERS);
+
+        RecipientIdentityPhoneNumber phoneNumber = new RecipientIdentityPhoneNumber();
+        phoneNumber.setCountryCode(countryCode);
+        phoneNumber.setNumber(phone);
+        
+        RecipientIdentityInputOption inputOption = new RecipientIdentityInputOption();
+        inputOption.setName("phone_number_list");
+        inputOption.setValueType("PhoneNumberList");
+        inputOption.setPhoneNumberList(Arrays.asList(phoneNumber));
+
+        RecipientIdentityVerification identityVerifcation = new RecipientIdentityVerification();
+
+
+        identityVerifcation.setWorkflowId(workFlowId);
+        identityVerifcation.setInputOptions(Arrays.asList(inputOption));
+
 
         Signer signer = new Signer();
         signer.setName(signerName);
@@ -97,9 +115,7 @@ public class EG020ControllerSmsAuthentication extends AbstractEsignatureControll
         signer.setDeliveryMethod(EnvelopeHelpers.DELIVERY_METHOD_EMAIL);
         signer.setRecipientId(signHere.getRecipientId());
         signer.setTabs(EnvelopeHelpers.createSignerTabs(signHere));
-        signer.setRequireIdLookup("true");
-        signer.setSmsAuthentication(smsAuth);
-        signer.setIdCheckConfigurationName("SMS Auth $");
+        signer.setIdentityVerification(identityVerifcation);
 
         Recipients recipients = new Recipients();
         recipients.setSigners(Arrays.asList(signer));
@@ -114,5 +130,25 @@ public class EG020ControllerSmsAuthentication extends AbstractEsignatureControll
 
         return envelope;
     }
-    // ***DS.snippet.0.end
+    // retreives the workflow ID
+    private String getWorkflowId(String accountId){
+        try {
+            AccountsApi workflowDetails = createAccountsApi(session.getBasePath(), user.getAccessToken());
+            AccountIdentityVerificationResponse workflowResponse = workflowDetails.getAccountIdentityVerification(accountId);
+
+            // Check that idv authentication is enabled
+            // The workflow ID is a hard-coded value which is unique to this phone authentication workflow
+            if (workflowResponse.getIdentityVerification() != null) {
+                return "c368e411-1592-4001-a3df-dca94ac539ae";
+            } else {
+                throw new RuntimeException("Identity Verification is not enabled for this account");
+            }
+
+
+        } catch (Exception e) {
+            return null;
+        }   
+        
+    }
+     // ***DS.snippet.0.end
 }
